--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
     "docs": "verb"
   },
   "dependencies": {
+    "archiver": "^1.0.1",
     "inhabit-modules-tests": "^1.2.3",
     "minimist": "~0.0.8",
     "pinkie-promise": "^2.0.1",
+    "request": "^2.74.0",
     "verbalize": "~0.1.1"
-  },
-  "devDependencies": {}
+  }
 }
