--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ihpm",
   "description": "InHabit Package Manager",
-  "version": "0.3.5",
+  "version": "0.3.6-0",
   "homepage": "https://github.com/rand0me/node-ihpm",
   "author": {
     "name": "rand0me",
