--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
   },
   "dependencies": {
     "archiver": "^1.0.1",
-    "inhabit-modules-tests": "^1.3.0",
+    "inhabit-modules-tests": "^1.3.1",
     "minimist": "~0.0.8",
     "pinkie-promise": "^2.0.1",
     "request": "^2.74.0",
+    "uglify-js": "^2.7.0",
     "verbalize": "~0.1.1"
   }
 }
