--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ihpm",
-  "version": "2.0.1",
+  "version": "2.0.2-0",
   "description": "InHabit CLI",
   "bin": {
     "ihpm": "./bin/ihpm"
