--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "chalk": "^1.1.3",
     "cli-frames": "^2.2.5",
     "commander": "~2.0.0",
-    "init-skeleton": "^0.9.5"
+    "generator-inhabit-module-template": "0.0.27",
+    "init-skeleton": "^0.9.5",
+    "yeoman-environment": "^1.6.6"
   },
   "devDependencies": {}
 }
