--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ihpm",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "description": "InHabit CLI",
   "bin": {
     "ihpm": "./bin/ihpm"
@@ -25,6 +25,8 @@
     "chalk": "^1.1.3",
     "cli-frames": "^2.2.5",
     "commander": "~2.0.0",
+    "generator-inhabit-brunch-js": "0.0.1",
+    "generator-inhabit-brunch-phaser": "0.0.3",
     "generator-inhabit-module-template": "0.0.27",
     "init-skeleton": "^0.9.5",
     "yeoman-environment": "^1.6.6"
